fix toggler. added modificator dark mode

--- a/07-lection5/03-toggler/toggler.css
+++ b/07-lection5/03-toggler/toggler.css
@@ -2,6 +2,18 @@
   display: inline-block;
 }
 
+/* mode-dark */
+
+.toggler_mode-dark {
+}
+
+.toggler_mode-dark .toggler__control::before,
+.toggler_mode-dark .toggler__control::after {
+  content: '' !important;
+}
+
+/* mode lite */
+
 .toggler_preview {
   pointer-events: none;
 }
@@ -30,6 +42,7 @@
   height: 28px;
   border-radius: 16px;
   cursor: pointer;
+  transition: background-color 0.2s linear;
 }
 
 .toggler__control::before {
